# Econometrics

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
latex/: bibliography.tex  chosen-model.tex  commands.tex  data-summary.tex  introduction.tex  model.tex  ols-and-tests.tex  root.tex  title.tex  wnioski.tex
src/: __main__.py  config.py  model.py  model_summary.py  ols.py  ols_estimator.py  ols_model.py  parse_dataset.py  plotter.py  root.py  stat_tests_results.py  summarizer.py  test_results.py  translations.py  utils.py
src/tests/: ols_fixture.csv  test_ols_model.py  test_stats.py  test_utils.py
