[tool.poetry]
name = "econometrics"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
numpy = "^1.18.4"
matplotlib = "^3.2.1"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
