[tool.poetry]
name = "econometrics"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
numpy = "^1.18.4"
matplotlib = "^3.2.1"
mako = "^1.1.2"
seaborn = "^0.10.1"
geopy = "^1.22.0"
scikit-learn = "^0.23.1"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.1"
coverage = "^5.1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
